[package]
name = "svecli"
version = "0.2.10"
description = "A CLI full of utilities for Svelte/Kit projects."
authors = ["TheOnlyTails <theonlytails@theonlytails.com>"]
repository = "https://github.com/theonlytails/svecli"
categories = ["command-line-utilities"]
keywords = ["cli", "svelte", "sveltekit", "utilities"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["unicode", "cargo"] }
owo-colors = { version = "3.2.0", features = ["supports-colors"] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["user-hooks"] }
